Portfolio site setup

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
 
     <!-- Portfolio showcase -->
         <div class="showcase">
-            <p>Hi, I'm Ross a front-end web developer.<br>My skills include HTML, CSS, Javascript and Vue.js<br>
-            I hope you enjoy my portfolio site.</p>
+            <p>Hi, I'm Ross a front-end web developer.<br>My skills include HTML, CSS, Javascript and I'm currently learning Vue.js<br>
+            I hope you enjoy my portfolio site :)</p>
             <ul>
                 <li><i class="fab fa-html5 fa-4x"></i></li>
                 <li><i class="fab fa-css3-alt fa-4x"></i></li>
