--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,10 @@
     <div id="overlay">
         <div class="showcase">
             <div class="projects">
-                <div>Project 1</div>
-                <div>Project 2</div>
-                <div>Project 3</div>
-                <div>Project 4</div>
+                <div id="project1"><a href="./projects/photo-gallery-site/index.html"><img src="img/photogallery.jpeg"></a></div>
+                <div id="project2"><a href="./projects/coffee-club/index.html"><img src="img/coffeeclub.jpeg"></a></div>
+                <div id="project3"><a href="./projects/my-calculator-app/index.html"><img src="img/calculator.jpeg"></a></div>
+                <div id="project4"><a href="#"><img src="img/underconstruction.jpeg"></a></div>
             </div>
         </div>
     </div>
