Updated on 23/03/2019 - Tic Toe Game Added

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div id="social-media">
             <a href="https://github.com/rosspackham"><i class="fab fa-github fa-2x"></i></a>
             <a href="https://www.linkedin.com/in/ross-packham-804180176/"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-facebook-square fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-codepen fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.facebook.com/ross.packham"><i class="fab fa-facebook-square fa-2x"></i></a>
+            <a href="https://codepen.io/ross-packham/"><i class="fab fa-codepen fa-2x"></i></a>
+            <a href="https://www.instagram.com/rosstheboss83/?hl=en"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
     </footer>
 </div>
