--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 <div id="project1"><a href="./projects/photo-gallery-site/index.html"><img src="img/photogallery.jpeg"></a></div>
                 <div id="project2"><a href="./projects/coffee-club/index.html"><img src="img/coffeeclub.jpeg"></a></div>
                 <div id="project3"><a href="./projects/my-calculator-app/index.html"><img src="img/calculator.jpeg"></a></div>
-                <div id="project4"><a href="#"><img src="img/underconstruction.jpeg"></a></div>
+                <div id="project4"><a href="./projects/tic-tac-toe-project/index.html"><img src="img/tictactoe.jpeg"></a></div>
             </div>
         </div>
     </div>
@@ -52,10 +52,10 @@
     <footer>
         <div id="social-media">
             <a href="https://github.com/rosspackham"><i class="fab fa-github fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-linkedin fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-facebook-square fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-codepen fa-2x"></i></a>
-            <a href="index.html"><i class="fab fa-instagram fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/ross-packham-804180176/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="https://www.facebook.com/ross.packham"><i class="fab fa-facebook-square fa-2x"></i></a>
+            <a href="https://codepen.io/ross-packham/"><i class="fab fa-codepen fa-2x"></i></a>
+            <a href="https://www.instagram.com/rosstheboss83/?hl=en"><i class="fab fa-instagram fa-2x"></i></a>
         </div>
     </footer>
 
